--- a/guides/alchemy-index.org
+++ b/guides/alchemy-index.org
@@ -10,3 +10,7 @@
 [ [[id:49c009a8-dbe3-4867-a616-60c55d87ed54][DM Menu]] ]
 #+END_CENTER
 -----
+* Alchemy
+** Generic Alchemy
+- _*Befriend*_: Roll a charisma check. On 14 or higher, turn any non-intelligent creature you are on neutral terms with into an ally. This effect lasts for twenty minutes, after which the creature will enter a state of confusion with a 50% potential to lash out at the party.
+- _*Transform*_: Select an animal. From now on, you can transform into this wild animal. Work with DM about its statistics. You health will stay with you throughout the transformation.
