--- a/dm-materials/dm.org
+++ b/dm-materials/dm.org
@@ -12,6 +12,7 @@
 -----
 * [[id:18a96883-cc40-409c-9fb5-80d5ab0c8379][Campaign DM Scripts]]
 * [[id:e6b25898-e7dd-4444-b332-ef9fc3ea59bf][Races]]
+* [[id:b6fbf6d4-e1c3-4b7b-a0d5-75488e3a7b70][Characters]]
 * [[id:69ef1740-156a-4e42-9493-49ec80a4ac26][Classes]]
 * [[id:69fc67b6-3d4a-451e-ab1e-e23bc20215ba][Enemies]]
 * Campaigns
@@ -29,6 +30,7 @@
 - [[id:49c66431-d9c7-4213-ae29-b62365fd32d4][Spell Index]]
 - [[id:628c4f0e-762b-428b-9a2c-03f97bb24737][Druid Circles]]
 - [[id:23919bd5-7bb0-4743-ae81-f07566cad236][Material Guide]]
+- [[id:5702276a-23d8-46dd-bcc8-3839d8031d71][Combat Flow]]
 -----
 * Campaign Todos
 ** TODO Finish classes
